2009-08-19  Hans Boehm <Hans.Boehm@hp.com>

	* include/gc_gcj.h (GC_init_gcj_malloc): Improve descriptive
	comment.

2009-08-11  Hans Boehm <Hans.Boehm@hp.com>
	(Replacement for Ivan Maidanski's diff99_cvs.  Hopefully fixes
	the same bugs, and then some.)

	* allchblk.c (GC_merge_unmapped): Don't assume that adjacent
	free blocks have different mapping status.  Correctly handle gap
	between blocks.
	(GC_split_block): Remove dead code setting hb_flags.  Add comment.
	(GC_allochblk): Split blocks also in generational-only mode.
	* os_dep.c (GC_unmap_gap): Dont really use munmap.

2009-08-08  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
	(Mistakenly omitted from last check-in)
	* include/private/gc_priv.h (GC_unmapped_bytes): Define as 0 for
	not USE_MUNMAP case.

2009-08-07  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
	diff111 (supersedes diff101_cvs which, in turn, resembles diff52, diff75, diff83 partly)

	* Makefile.direct (MARK_BIT_PER_OBJ, PRINT_BLACK_LIST,
	USE_PROC_FOR_LIBRARIES): Fix typo in the comments.
	* Makefile.direct (USE_MMAP, USE_MUNMAP, THREAD_LOCAL_ALLOC,
	PARALLEL_MARK, STATIC): Update the comments.
	* include/private/gcconfig.h (GC_PREFER_MPROTECT_VDB): New macro
	recognized (only if MPROTECT_VDB).
	* Makefile.direct (DONT_USE_USER32_DLL, GC_PREFER_MPROTECT_VDB):
	Add the comments for.
	* os_dep.c (detect_GetWriteWatch): Recognize "GC_USE_GETWRITEWATCH"
	environment variable (only if MPROTECT_VDB, if the variable is
	unset when GC_PREFER_MPROTECT_VDB macro controls the strategy).
	* doc/README.environment (GC_USE_GETWRITEWATCH): New variable.
	* include/private/gcconfig.h (MPROTECT_VDB): Add FIXME for
	USE_MUNMAP and PARALLEL_MARK cases (to relax the conditions in
	the future).
	* misc.c (GC_get_heap_size, GC_get_free_bytes): Ignore the memory
	space returned to OS (GC_unmapped_bytes).
	* include/gc.h (GC_get_heap_size, GC_get_free_bytes): Update the
	comments.
	* misc.c (GC_get_unmapped_bytes): New API function.